<resources>
    <string name="app_name">요리킹 조리킹 !</string>
    <string name="main_find">요리찾기</string>
    <string name="main_insert">재료넣기</string>
    <string name="myref_material">재료</string>
    <string name="myref_add">추가</string>
    <string name="myref_delete">삭제</string>
    <string name="myref_lookup">조회</string>
    <string name="myref_delall">전체삭제</string>
    <string name="recipe_name">이름 : </string>
    <string name="recipe_material">재료 : </string>
    <string name="recipe_cook">요리방법 : </string>

</resources>
